Bug 1188752: Ensure persistence of DrawTarget when using InitializeWithSurface. r=jrmuizel a=ritu